--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "bootstrap": "^5.3.5",
     "html-react-parser": "^5.2.3",
     "lightgallery": "^2.8.3",
-    "next": "15.3.1",
-    "react": "^19",
-    "react-dom": "^19",
+    "next": "^14.2.3",
+    "react": "^18",
+    "react-dom": "18.2.0",
     "react-slick": "^0.30.3",
-    "sass": "^1.87.0",
+    "sass": "^1.69.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@iconify/react": "^5.2.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1"
+    "eslint": "^8",
+    "eslint-config-next": "^14.2.3"
   },
   "browserslist": [
     "chrome 64",
