--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "bootstrap": "^5.3.5",
     "html-react-parser": "^5.2.3",
+    "jarallax": "^2.2.1",
     "lightgallery": "^2.8.3",
     "next": "^14.2.3",
     "react": "^18",
