--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.5",
+    "critters": "^0.0.23",
     "html-react-parser": "^5.2.3",
     "jarallax": "^2.2.1",
     "lightgallery": "^2.8.3",
     "next": "^14.2.3",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "18.2.0",
     "react-slick": "^0.30.3",
