feat: improve SEO and import paths - Add SEO components (MetaTags, StructuredData, DynamicRoute, SEOImage, SEOLink) - Update import paths to use @ aliases - Add robots.txt and manifest.json - Update Team component with SEO optimizations - Fix relative imports in UI components

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,15 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@public/*": ["./public/*"]
+      "@/*": ["src/*"],
+      "@components/*": ["src/app/components/*"],
+      "@ui/*": ["src/app/ui/*"],
+      "@styles/*": ["src/app/scss/*"],
+      "@utils/*": ["src/app/utils/*"],
+      "@hooks/*": ["src/app/hooks/*"],
+      "@context/*": ["src/app/context/*"],
+      "@public/*": ["public/*"]
     }
   }
 }
