--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
+    "@tailwindcss/postcss": "^4.1.10",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.5",
     "critters": "^0.0.23",
@@ -27,8 +28,11 @@
   },
   "devDependencies": {
     "@iconify/react": "^5.2.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8",
-    "eslint-config-next": "^14.2.3"
+    "eslint-config-next": "^14.2.3",
+    "postcss": "^8.5.5",
+    "tailwindcss": "^4.1.10"
   },
   "browserslist": [
     "chrome 64",
