--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-slick": "^0.30.3",
     "sass": "^1.69.5",
+    "sharp": "^0.34.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.6"
   },
